@@ -11,6 +11,7 @@ deleted and modified parameters:
 
 fixed bugs:
 - fixed wrong cast in LP iteration limit computation in proximity search heuristic
+- fixed check for time limit in heur_nlpdiving
 
 
 SCIP version 5.0.0
